[gd_scene load_steps=22 format=3 uid="uid://c1tei58gm8yng"]

[ext_resource type="Script" path="res://scripts/planet.gd" id="1_5oh5n"]
[ext_resource type="VoxelGeneratorGraph" uid="uid://bdkons750aky1" path="res://scripts/world/voxel_graph_planet_v4.tres" id="2_fyyaf"]
[ext_resource type="Shader" path="res://materials/planet_ground.gdshader" id="3_etkq3"]
[ext_resource type="Texture2D" uid="uid://jfywo4xd75ku" path="res://textures/Rocks07_col.webp" id="4_qq2xy"]
[ext_resource type="Texture2D" uid="uid://dvpf64ui03kn5" path="res://textures/Rocks07_nrm.webp" id="5_hyvv3"]
[ext_resource type="Texture2D" uid="uid://dq0s3scgs2ncg" path="res://textures/grass_albedo.png" id="6_6efov"]
[ext_resource type="Texture2D" uid="uid://ksj4nnvstubh" path="res://textures/grass_normal.png" id="7_0umbv"]
[ext_resource type="PackedScene" uid="uid://c36velgas3n3k" path="res://addons/zylann.atmosphere/planet_atmosphere.tscn" id="8_1pqpo"]
[ext_resource type="Shader" path="res://addons/zylann.atmosphere/shaders/planet_atmosphere_v1_clouds.gdshader" id="9_0k2os"]
[ext_resource type="NoiseTexture3D" uid="uid://cudqtkcf6wrj2" path="res://atmosphere/noise_texture_3d.res" id="10_64tyq"]
[ext_resource type="Cubemap" uid="uid://dxg8ujayqjxyo" path="res://atmosphere/cloud_coverage_earth.tres" id="11_8q788"]

[sub_resource type="VoxelMesherTransvoxel" id="VoxelMesherTransvoxel_ynxpy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3xfu6"]
render_priority = 0
shader = ExtResource("3_etkq3")
shader_parameter/u_transition_mask = null
shader_parameter/u_lod_fade = null
shader_parameter/u_voxel_virtual_texture_tile_size = null
shader_parameter/u_voxel_virtual_texture_fade = null
shader_parameter/u_voxel_cell_size = null
shader_parameter/u_voxel_block_size = null
shader_parameter/u_voxel_virtual_texture_offset_scale = null
shader_parameter/u_mountain_height = 10000.0
shader_parameter/u_top_modulate = Color(1, 1, 1, 1)
shader_parameter/u_block_local_transform = null
shader_parameter/u_top_albedo_texture = ExtResource("6_6efov")
shader_parameter/u_top_normal_texture = ExtResource("7_0umbv")
shader_parameter/u_side_albedo_texture = ExtResource("4_qq2xy")
shader_parameter/u_side_normal_texture = ExtResource("5_hyvv3")

[sub_resource type="SphereShape3D" id="SphereShape3D_x2vbj"]
radius = 2.048e+06

[sub_resource type="FastNoiseLite" id="FastNoiseLite_eiaw4"]

[sub_resource type="VoxelGeneratorGraph" id="VoxelGeneratorGraph_xql6u"]
graph_data = {
"connections": [[2, 0, 9, 0], [2, 0, 76, 0], [67, 0, 75, 1], [3, 0, 9, 1], [3, 0, 77, 0], [4, 0, 9, 2], [4, 0, 78, 0], [69, 0, 67, 0], [75, 0, 1, 0], [76, 0, 69, 0], [77, 0, 69, 1], [78, 0, 69, 2], [9, 0, 75, 0]],
"nodes": {
"1": {
"auto_connect": true,
"gui_position": Vector2(940, 100),
"type": "OutputSDF"
},
"2": {
"gui_position": Vector2(-180, 100),
"type": "InputX"
},
"3": {
"gui_position": Vector2(-180, 160),
"type": "InputY"
},
"4": {
"gui_position": Vector2(-180, 220),
"type": "InputZ"
},
"67": {
"b": 100.0,
"gui_position": Vector2(480, 220),
"name": &"Глубина кратера",
"type": "Multiply"
},
"69": {
"auto_connect": true,
"gui_position": Vector2(260, 280),
"name": &"Шум кратера",
"noise": SubResource("FastNoiseLite_eiaw4"),
"type": "Noise3D"
},
"75": {
"gui_position": Vector2(760, 100),
"type": "Subtract"
},
"76": {
"b": 0.1,
"gui_position": Vector2(-40, 260),
"name": &"Ширина кратера X",
"type": "Multiply"
},
"77": {
"b": 0.1,
"gui_position": Vector2(-40, 360),
"name": &"Ширина кратера Y",
"type": "Multiply"
},
"78": {
"b": 0.1,
"gui_position": Vector2(-40, 460),
"name": &"Ширина кратера Z",
"type": "Multiply"
},
"9": {
"auto_connect": true,
"gui_position": Vector2(40, 120),
"name": &"sphere",
"radius": 1739.28,
"type": "SdfSphere"
}
},
"version": 2
}

[sub_resource type="VoxelMesherTransvoxel" id="VoxelMesherTransvoxel_celiq"]

[sub_resource type="Gradient" id="Gradient_5ngcf"]
colors = PackedColorArray(0.158472, 0.158472, 0.158472, 1, 0.741385, 0.741385, 0.741385, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_3wpye"]
noise_type = 3
frequency = 0.0347

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_2stwu"]
width = 1024
height = 1024
color_ramp = SubResource("Gradient_5ngcf")
noise = SubResource("FastNoiseLite_3wpye")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_td7ej"]
albedo_texture = SubResource("NoiseTexture2D_2stwu")
uv1_scale = Vector3(0.1, 0.1, 0.1)
uv1_triplanar = true
texture_filter = 2

[node name="earth" type="StaticBody3D"]
script = ExtResource("1_5oh5n")

[node name="terrain" type="VoxelLodTerrain" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 81.7456, 0, 0)
generator = ExtResource("2_fyyaf")
mesher = SubResource("VoxelMesherTransvoxel_ynxpy")
view_distance = 16384
voxel_bounds = AABB(-16384, -16384, -16384, 32768, 32768, 32768)
lod_count = 7
lod_distance = 32.0
material = SubResource("ShaderMaterial_3xfu6")
run_stream_in_editor = false

[node name="PlanetAthmosphere" parent="." instance=ExtResource("8_1pqpo")]
planet_radius = 6370.0
atmosphere_height = 1000.0
custom_shader = ExtResource("9_0k2os")
shader_params/u_density = 0.001
shader_params/u_day_color0 = Color(0.5, 0.8, 1, 1)
shader_params/u_day_color1 = Color(0.5, 0.8, 1, 1)
shader_params/u_night_color0 = Color(0.2, 0.4, 0.8, 1)
shader_params/u_night_color1 = Color(0.2, 0.4, 0.8, 1)
shader_params/u_day_night_transition_scale = 2.0
shader_params/u_cloud_shape_invert = 1.0
shader_params/u_cloud_coverage_bias = 0.05
shader_params/u_cloud_shape_factor = 0.4
shader_params/u_cloud_shape_scale = 0.002
shader_params/u_cloud_density_scale = 0.005
shader_params/u_cloud_bottom = 0.2
shader_params/u_cloud_top = 0.5
shader_params/u_cloud_blend = 0.5
shader_params/u_cloud_shape_texture = ExtResource("10_64tyq")
shader_params/u_cloud_coverage_cubemap = ExtResource("11_8q788")

[node name="body_trigger" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="body_trigger"]
shape = SubResource("SphereShape3D_x2vbj")

[node name="moon_orbit" type="Marker3D" parent="."]

[node name="moon" type="VoxelLodTerrain" parent="moon_orbit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 163.491, 0, 170096)
generator = SubResource("VoxelGeneratorGraph_xql6u")
mesher = SubResource("VoxelMesherTransvoxel_celiq")
view_distance = 196608
voxel_bounds = AABB(-16384, -16384, -16384, 32768, 32768, 32768)
lod_count = 12
lod_distance = 32.0
material = SubResource("StandardMaterial3D_td7ej")
threaded_update_enabled = true

[connection signal="body_entered" from="body_trigger" to="." method="_on_body_trigger_body_entered"]
[connection signal="body_exited" from="body_trigger" to="." method="_on_body_trigger_body_exited"]
